tests/core/negative/types/undefined_var.vais
fn main() -> i64 {
    return missing_value
}
